UI tweaks to some headers.  Fixed look and feel of tag editor search.

--- a/Enfoca/Features/Edit/Edit.storyboard
+++ b/Enfoca/Features/Edit/Edit.storyboard
@@ -600,7 +600,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eDc-Px-LmS">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="132"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="140"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ycJ-9P-nyX">
                                         <rect key="frame" x="8" y="30" width="37" height="30"/>
@@ -613,7 +613,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Selected: (none)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FCT-Pp-SiW">
-                                        <rect key="frame" x="8" y="114" width="359" height="14.5"/>
+                                        <rect key="frame" x="8" y="122" width="359" height="14.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <color key="textColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -638,7 +638,7 @@
                                 <color key="backgroundColor" red="0.32549019610000002" green="0.34509803919999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="hCX-ve-AUc" secondAttribute="trailing" constant="8" id="6SA-3G-LvF"/>
-                                    <constraint firstAttribute="height" constant="132" id="Aiy-6a-kcq"/>
+                                    <constraint firstAttribute="height" constant="140" id="Aiy-6a-kcq"/>
                                     <constraint firstItem="FCT-Pp-SiW" firstAttribute="leading" secondItem="eDc-Px-LmS" secondAttribute="leading" constant="8" id="DDe-XB-3gP"/>
                                     <constraint firstAttribute="trailing" secondItem="FCT-Pp-SiW" secondAttribute="trailing" constant="8" id="DqW-vD-M2W"/>
                                     <constraint firstItem="ycJ-9P-nyX" firstAttribute="centerY" secondItem="cEH-hC-LUR" secondAttribute="centerY" id="H7y-19-dRg"/>
@@ -648,9 +648,21 @@
                                     <constraint firstItem="cEH-hC-LUR" firstAttribute="top" secondItem="eDc-Px-LmS" secondAttribute="top" constant="32" id="v2E-Bb-tY1"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="07V-om-ILB">
+                                <rect key="frame" x="6" y="62" width="363" height="54"/>
+                                <color key="backgroundColor" red="0.34599548279999998" green="0.36561761399999998" blue="0.38917676449999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="54" id="4jc-eL-C0X"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wF2-1p-Fm6" customClass="MagnifierCloseView" customModule="Enfoca">
-                                <rect key="frame" x="317" y="60" width="50" height="50"/>
-                                <color key="backgroundColor" red="0.32549019610000002" green="0.34509803919999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <rect key="frame" x="317" y="64" width="50" height="50"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="4Oh-f0-Yuo"/>
                                     <constraint firstAttribute="width" secondItem="wF2-1p-Fm6" secondAttribute="height" multiplier="1:1" id="aEF-ja-NeB"/>
@@ -669,7 +681,7 @@
                                 </connections>
                             </view>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search or Create" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dBV-1Q-aiz">
-                                <rect key="frame" x="8" y="60" width="308" height="50"/>
+                                <rect key="frame" x="12" y="64" width="304" height="50"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="tintColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -683,7 +695,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsMultipleSelection="YES" rowHeight="67" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lNh-4m-4Jn">
-                                <rect key="frame" x="0.0" y="132" width="375" height="535"/>
+                                <rect key="frame" x="0.0" y="140" width="375" height="527"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="TagFilterCell" rowHeight="54" id="ArB-6p-Uvg" customClass="TagCell" customModule="Data_Import" customModuleProvider="target">
@@ -835,18 +847,21 @@
                         <color key="backgroundColor" red="0.32549019610000002" green="0.34509803919999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="lNh-4m-4Jn" firstAttribute="top" secondItem="eDc-Px-LmS" secondAttribute="bottom" id="10p-bO-eKV"/>
-                            <constraint firstItem="dBV-1Q-aiz" firstAttribute="leading" secondItem="eDc-Px-LmS" secondAttribute="leading" constant="8" id="3bA-7b-Ppy"/>
+                            <constraint firstItem="dBV-1Q-aiz" firstAttribute="leading" secondItem="eDc-Px-LmS" secondAttribute="leading" constant="12" id="3bA-7b-Ppy"/>
                             <constraint firstAttribute="trailing" secondItem="eDc-Px-LmS" secondAttribute="trailing" id="4e6-ej-vVM"/>
+                            <constraint firstAttribute="trailing" secondItem="07V-om-ILB" secondAttribute="trailing" constant="6" id="559-WC-dcV"/>
                             <constraint firstItem="eDc-Px-LmS" firstAttribute="top" secondItem="e5S-dk-TyI" secondAttribute="bottom" constant="-20" id="7YU-bL-OaY"/>
                             <constraint firstItem="lNh-4m-4Jn" firstAttribute="leading" secondItem="TCJ-JZ-dcx" secondAttribute="leading" id="Djr-qN-0QN"/>
                             <constraint firstItem="wF2-1p-Fm6" firstAttribute="leading" secondItem="dBV-1Q-aiz" secondAttribute="trailing" constant="1" id="GAf-B1-5o3"/>
                             <constraint firstItem="lNh-4m-4Jn" firstAttribute="trailing" secondItem="TCJ-JZ-dcx" secondAttribute="trailing" id="K3O-gI-MvG"/>
-                            <constraint firstItem="FCT-Pp-SiW" firstAttribute="top" secondItem="dBV-1Q-aiz" secondAttribute="bottom" constant="4" id="YGE-Zd-wFW"/>
+                            <constraint firstItem="FCT-Pp-SiW" firstAttribute="top" secondItem="dBV-1Q-aiz" secondAttribute="bottom" constant="8" id="YGE-Zd-wFW"/>
                             <constraint firstItem="z9L-1I-Bbl" firstAttribute="top" secondItem="lNh-4m-4Jn" secondAttribute="bottom" id="aLv-Eo-bHM"/>
-                            <constraint firstItem="dBV-1Q-aiz" firstAttribute="top" secondItem="eDc-Px-LmS" secondAttribute="bottom" constant="-72" id="hX0-Tu-362"/>
+                            <constraint firstItem="dBV-1Q-aiz" firstAttribute="top" secondItem="eDc-Px-LmS" secondAttribute="bottom" constant="-76" id="hX0-Tu-362"/>
                             <constraint firstItem="wF2-1p-Fm6" firstAttribute="centerY" secondItem="dBV-1Q-aiz" secondAttribute="centerY" id="ifA-3L-mH1"/>
                             <constraint firstItem="eDc-Px-LmS" firstAttribute="leading" secondItem="TCJ-JZ-dcx" secondAttribute="leading" id="jOK-wz-Uvh"/>
                             <constraint firstAttribute="trailing" secondItem="dBV-1Q-aiz" secondAttribute="trailing" constant="59" id="omS-V3-bNH"/>
+                            <constraint firstItem="07V-om-ILB" firstAttribute="leading" secondItem="TCJ-JZ-dcx" secondAttribute="leading" constant="6" id="rUr-r5-kyG"/>
+                            <constraint firstItem="07V-om-ILB" firstAttribute="centerY" secondItem="dBV-1Q-aiz" secondAttribute="centerY" id="sgU-R0-KZT"/>
                             <constraint firstItem="wF2-1p-Fm6" firstAttribute="width" secondItem="wF2-1p-Fm6" secondAttribute="height" multiplier="1:1" id="xkr-pd-6eZ"/>
                         </constraints>
                     </view>
